# ReactionGame

./: .gitignore  CMakeLists.txt  Klassendiagramm-uml.drawio  README.md
include/HelperClasses/: Utils.h
include/PreGameControlling/: Game.h  GameSession.h  Menu.h
include/Scene/: DrawHandler.h  Frame.h  GameMode.h  KittiObject.h  ResultsHandler.cpp  ResultsHandler.h  Scenery.h
include/Scene/GameModes/: ColorChangeReaction.h  DirectClickReaction.h  EveryObjectReaction.h  SelectCarsReaction.h  ShrinkingBoxesReaction.h
include/Scene/HelperClasses/: Constants.h  EventEntry.h  GTBoundingBox.h  Label.h  Labeltypes.h  Point.h
include/sharedHelperClasses/: Gamemode.h
src/: main.cpp
src/HelperClasses/: Utils.cpp
src/PreGameControlling/: Game.cpp  GameSession.cpp  Menu.cpp
src/Scene/: DrawHandler.cpp  Frame.cpp  GameMode.cpp  KittiObject.cpp  ResultsHandler.cpp  Scenery.cpp
src/Scene/GameModes/: ColorChangeReaction.cpp  DirectClickReaction.cpp  EveryObjectReaction.cpp  SelectCarsReaction.cpp  ShrinkingBoxesReaction.cpp
src/Scene/HelperClasses/: EventEntry.cpp  GTBoundingBox.cpp  Label.cpp  Labeltypes.cpp  Labeltypes.h  Point.cpp
test/: CMakeLists.txt  Frame.cpp  FrameTest.cpp  GTBoundingBoxTest.cpp  KittiObjectTest.cpp  LabelTest.cpp  PointTest.cpp  ReactionGameTest.cpp
